k8s/base/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deployment
  labels:
    component: ui
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  replicas: 1
  selector:
    matchLabels:
      component: ui
  template:
    metadata:
      labels:
        component: ui
    spec:
      containers:
        - name: ui
          image: bartekczyz/c8y-k8s-demo-ui
          ports:
            - containerPort: 3000
