k8s/base/ui-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: ui
  ports:
    - port: 3000
      targetPort: 3000
