k8s/base/api-ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    # https://github.com/kubernetes/ingress-nginx/tree/master/docs/examples/rewrite#rewrite-target
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /api/(.*)
            backend:
              serviceName: api-cluster-ip-service
              servicePort: 3000
#          - path: /something-else/(.*)
#            backend:
#              serviceName: some-else-cluster-ip-service
#              servicePort: 4646
