k8s/base/ui-ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ui-ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: ui-cluster-ip-service
              servicePort: 3000
